--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ branches:
 build: off
 
 install:
-  - java -jar ./artifacts/app-order.jar &
+  - java -jar ./artifacts/app-order.jar -P:profile=test &
 
 build_script:
   - chmod +x gradlew
