--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ branches:
 build: off
 
 install:
-  - java -jar ./artifacts/app-order.jar -P:profile=test &
+  - java -jar ./artifacts/app-ibank.jar -P:profile=test &
+  - chmod +x gradlew
 
 build_script:
-  - chmod +x gradlew
   - ./gradlew test --info
